Recovery from PulseAudio overflow
VLC does not recover from overflow in the PulseAudio output.
To reproduce this, switch to text mode login screen (Ctrl+Alt+F1) for a few seconds, while VLC is playing. The sound should stop as PulseAudio follows ConsoleKit signals.
Then come back to the graphical sessio (Alt+F7 or whatever).