Flush PulseAudio stream on overflow (fix #5464)